test/error/badbreak.lua
do
	while true do
		break;
	end
end
do
	break;
end
